--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 120,
+  "singleAttributePerLine": true,
+  "bracketSpacing": true,
+  "tabWidth":2
 }
