--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
   "printWidth": 120,
   "singleAttributePerLine": true,
   "bracketSpacing": true,
-  "tabWidth":2
+  "tabWidth":2,
+  "useTabs": false,
+  "semi": true,
+  "arrowParens": "always"
 }
